# LST-ME_KNOW

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  run.sh
data/: Perpetual_Peace_Kant.txt  The_critique_of_pure_reason_full.txt  moby_dick.txt
mlartifacts/0/2ee27b0b19ca4c718684473a70f6cbc4/artifacts/checkpoints/: checkpoint_epoch_1.pt  checkpoint_epoch_11.pt  checkpoint_epoch_16.pt  checkpoint_epoch_21.pt  checkpoint_epoch_26.pt  checkpoint_epoch_31.pt  checkpoint_epoch_36.pt  (+3 more)
mlruns/0/: meta.yaml
mlruns/0/2ee27b0b19ca4c718684473a70f6cbc4/: meta.yaml
mlruns/0/2ee27b0b19ca4c718684473a70f6cbc4/metrics/: test_k_accuracy  train_accuracy  train_loss
mlruns/0/2ee27b0b19ca4c718684473a70f6cbc4/tags/: mlflow.runName
mlruns/0/591e5874c455475cb213ddfc140adaa4/: meta.yaml
mlruns/0/591e5874c455475cb213ddfc140adaa4/metrics/: test_k_accuracy  train_accuracy  train_loss
mlruns/0/591e5874c455475cb213ddfc140adaa4/tags/: mlflow.runName
mlruns/0/9a5729d3aaf24497a544a75a0a243695/: meta.yaml
mlruns/0/9a5729d3aaf24497a544a75a0a243695/metrics/: train_accuracy  train_loss
mlruns/0/9a5729d3aaf24497a544a75a0a243695/tags/: mlflow.runName
src/: lstm_auto_complete.py  playground_transformer.ipynb  transformer_auto_complete.py  x_lstm_auto_complete.py
src/your_mlflow_tracking_uri/0/: meta.yaml
src/your_mlflow_tracking_uri/0/20440a8251664eebbb901cb8c6858dc0/: meta.yaml
src/your_mlflow_tracking_uri/0/69f12f7c6f1743b0bc8930ed267dc976/: meta.yaml
src/your_mlflow_tracking_uri/0/f93b9ea1879841b7bfb92bd72c1d7fec/: meta.yaml
(+97 files in other folders)
