[tool.poetry]
name = "lst-me-know"
version = "0.1.0"
description = ""
authors = ["dominik-pichler <info@dominik-pichler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
transformers = "^4.42.3"
torch = "^2.3.1"
datasets = "^2.20.0"
accelerate = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
